# Generative-AI-Q-A-System

./: .gitignore  README.md  docker-compose.yml  dockerfile
examples/: Untitled.ipynb
scripts/: run_be.sh  run_fe.sh
src/backend/: README.md  dockerfile  pyproject.toml  requirements.txt
src/backend/app/: main.py
src/backend/app/app/: models.py
src/backend/app/app/api/: __init__.py
src/backend/app/app/api/endpoints/: conversations.py  documents.py
src/backend/app/app/core/: config.py
src/backend/app/app/core/engine/: __init__.py  base.py  engine.py  rag_engine.py
src/backend/app/app/core/vectordb/: __init__.py  base.py  chroma.py  milvus.py
src/frontend/: README.md  dockerfile  next.config.js  package-lock.json  package.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/app/hub/: page.tsx
src/frontend/app/qa/: page.tsx
src/frontend/app/upload/: page.tsx
src/frontend/components/: DocumentSelection.tsx  DocumentUploader.tsx  Navbar.tsx  PDFViewer.tsx
