[tool.poetry]
name = "generative ai q&a system"
version = "0.1.0"
description = ""
authors = ["E-Ro Nguyen <nero18@apcs.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
langchain = "^0.1.0"
openai = "^1.6.1"
pypdf = "^3.17.4"
pymilvus = "^2.3.5"
tiktoken = "^0.5.2"
chromadb = "^0.4.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
